# explainability-experiments

./: .gitignore  README.md  requirements.txt
benchmarks/alibi/: .tool-versions  benchmark.ipynb  requirements.txt
benchmarks/optaplanner/src/main/java/counterfactual/benchmark/: Benchmark.java  Model.java
client/: pom.xml
client/src/main/java/dev/ruivieira/counterfactual/: BMIModel.java  Measures.java  OptimizableModel.java
counterfactual-client/: README.md  pom.xml
counterfactual-client/src/main/java/dev/ruivieira/counterfactual/: CounterfactualUtils.java  FeatureType.java
counterfactual-client/src/main/resources/: BMISolverConfig.xml  CCAClosestMoveBendableSolverConfig.xml  CCAFilteredMoveBendableSolverConfig.xml  CreditCardApprovalBendableSolverConfig.xml  CreditCardApprovalHardSoftSolverConfig.xml  CreditCardApprovalSolverConfig.xml  benchmarkConfig.xml  solver.xml
counterfactual-dynamic/src/main/resources/: SolverConfig.xml
counterfactual-rest/: README.md  pom.xml
counterfactual-rest-2/: pom.xml
counterfactual-rest-2/src/main/resources/: SolverConfig.xml
counterfactual-rest/src/main/resources/: ApprovalBendableSolverConfig.xml  SolverConfig.xml
demos/counterfactual-op/: README.md  pom.xml
explainability-core-experiments/counterfactuals/: pom.xml
explainability-lib-experiments/: pom.xml
explainability-lib-experiments/src/main/java/xai/: BiasedModelsLimeExplainerTest.java  TestUtils.java
models/: bmi.pmml  loan.pmml
notebooks/: LIME.ipynb  bmi.ipynb  fairness-counterfactual.ipynb  java-counterfactuals.ipynb  loan.ipynb  pyproject.toml
(+71 files in other folders)
