[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Rui Vieira <ruidevieira@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ghp-import = "^1.0.0"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
